[package]
name = "crow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }

#### logger
log = "0.4"
fern = "0.6"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4"] }

######## database Postgress
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7" }
anyhow = "1.0"
async-trait = "0.1"

postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }

sha2 = "0.10"
mime_guess = "2.0"

