[package]
name = "crow-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

#### logger
log = "0.4"
fern = "0.6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
bollard = { version = "0.14", features = ["ssl"] }
async-trait = "0.1"
tar = "0.4"

crow-core = { path = "../crow-core" }
